plugins/javaFX/testData/highlighting/eventHandlers.fxml
<?xml version="1.0" encoding="UTF-8"?>

<?import javafx.geometry.*?>
<?import javafx.scene.layout.*?>
<?import javafx.scene.control.*?>

<GridPane xmlns:fx="http://javafx.com/fxml">
    <Button fx:id="btn" onMouseClicked=<error descr="No controller specified for top level element">"#foo"</error>/>
</GridPane>